# boardgame-recommender

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.toml  openapi.yaml  pyproject.toml  sitecustomize.py
.hypothesis/constants/: 0cadf9a2830b1357  23dc0467fc38531a  57f57281f097e697  60fee892bbde1991  76209285bfcc9113  8ae4b1d66a1fcae0  ad0a02763b128dc7  d66afc10b3fd3621  ef472d18cbfa9a17  f6364e16044fc4b0
.hypothesis/examples/04e6b3400353b141/: 336578b1d55548fd  47ea79fb28b21037  5bfcc07771027885  e47e8b61ec934b10
.hypothesis/examples/336578b1d55548fd/: 446229cdd8e4638a  6c08f4183d171eb7  7c109bc527370ba9  b5587a99bbb62b8b  c737693bf27561c7  ea452aa3d2b889af
.hypothesis/examples/47ea79fb28b21037/: 02ddabb1734fabe2  0e4b4fb9bcb2ccb8  139745a09636ec03  2aa09af8d9627bd3  eda15f05cd566373
.hypothesis/examples/5bfcc07771027885/: 9b63c454f20d2ec1
.hypothesis/examples/e47e8b61ec934b10/: 1a59f738c4b26984
backend/: pyproject.toml
backend/data/: app.sqlite3
backend/src/boardgames_api/: __init__.py  app.py  db.py
backend/src/boardgames_api/domain/games/: bgg_metadata.py  exceptions.py  filters.py  models.py  records.py  repository.py  routes.py  schemas.py  service.py
backend/src/boardgames_api/domain/participants/: exceptions.py  records.py  repository.py  routes.py  schemas.py  service.py
backend/src/boardgames_api/domain/recommendations/: constants.py  context.py  exceptions.py  explainers.py  models.py  pipeline.py  reccomender.py  records.py  repository.py  routes.py  schemas.py  scoring.py  service.py
backend/src/boardgames_api/http/: __init__.py  auth.py  dependencies.py  router.py
backend/src/boardgames_api/http/errors/: handlers.py  schemas.py
backend/src/boardgames_api/infrastructure/: __init__.py  database.py  embeddings.py
backend/src/boardgames_api/infrastructure/seeders/: boardgames.py
backend/src/boardgames_api/models/: __init__.py  auth.py  common.py  games.py  recommendations.py
backend/src/boardgames_api/persistence/: __init__.py  database.py
backend/src/boardgames_api/persistence/seeders/: __init__.py  boardgames.py
backend/src/boardgames_api/routes/: __init__.py  auth.py  games.py  recommendations.py  router.py
backend/src/boardgames_api/services/: __init__.py  auth.py  games.py  recommendations.py
backend/src/boardgames_api/utils/: __init__.py  embedding.py  exceptions.py
backend/static/: index.html
backend/static/assets/: index-26248c99.js  index-B4SNkO0M.css  index-B7I7VUeE.css  index-BBQO0H1j.js  index-B_1v5Zqz.js  index-BxQJxfxw.css  index-CH9Qnt_k.js  index-CfYLyL2-.js  index-wG-6NeS7.css
backend/tests/: conftest.py  test_contract.py  test_embedding_loading.py  test_integration.py  test_main.py  test_problem_details.py  test_recommendation_errors.py  test_recommendation_filters.py  test_seeding_and_persistence.py  utils.py
backend/tests/api/: test_problem_details.py
backend/tests/api/auth/: test_auth_flow.py
backend/tests/api/games/: test_games_filters.py  test_games_metadata.py  test_games_openapi.py
backend/tests/api/recommendations/: test_recommendation_errors.py  test_recommendation_filters.py  test_recommendation_flow.py  test_recommendation_metadata.py
backend/tests/infrastructure/: test_embedding_loading.py  test_main.py
backend/tests/openapi/: test_contract.py  test_openapi_examples.py  test_openapi_recommendation_example.py
backend/tests/persistence/: test_integration.py  test_persistence_integrity.py  test_seeding_and_persistence.py
backend/tests/recommendations/: test_pipeline_unit.py  test_ranker.py  test_service.py
cli/: README.md  config.toml  pyproject.toml
cli/src/boardgames_cli/: app.py  cli.py  config.py  recommend.py
cli/src/boardgames_cli/pipelines/: __init__.py  preprocessing.py  training.py
cli/src/boardgames_cli/utils/: __init__.py  file.py  transforms.py
cli/tests/: conftest.py  test_end_to_end.py  test_preprocessing.py  test_recommendation.py  test_training.py
data/: synonyms.toml
data/stopwords/: boardgame.txt  english.txt
frontend/: index.html  package-lock.json  package.json  vite.config.mjs  vite.config.ts
frontend/src/: App.vue  api.mts  boardGame.mts  index.jsx  main.ts  recommendation.mts  wishlist.mts
frontend/src/components/: DropDownSearch.vue  GameAdder.vue  RecommendationCard.vue  TaskCompletedPopup.vue
frontend/src/router/: index.ts
frontend/src/stores/: wishlist.ts
frontend/src/styles/: theme.css
frontend/src/views/: ExplorePage.vue  GameDetail.vue  HomePage.vue  RecommendationsPage.vue  WishList.vue
issues/: rename-tastemodel.md
src/boardgame_recommender/: __main__.py  cli.py  config.py  main.py  recommend.py  recommendation.py
src/boardgame_recommender/pipelines/: preprocessing.py  training.py
src/boardgame_recommender/utils/: transforms.py  validation.py
tests/: __init__.py  conftest.py  test_end_to_end.py  test_preprocessing.py  test_recommendation.py  test_training.py
