[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boardgames-api"
version = "0.1.0"
description = "FastAPI backend that serves boardgame recommendations."
requires-python = ">=3.11,<3.15"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy>=2.0",
    "polars",
    "types-requests>=2.32.4.20250913",
]


[dependency-groups]
dev = [
    "schemathesis",
]


[project.scripts]
boardgames-api = "boardgames_api.app:main"

[tool.uv.sources]
boardgames-api = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/boardgames_api"]
