[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boardgames-api"
version = "0.1.0"
description = "FastAPI backend that serves boardgame recommendations."
requires-python = ">=3.11,<3.15"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy>=2.0",
    "polars",
    "numpy",
    "scikit-learn",
    "types-requests>=2.32.4.20250913",
    "itsdangerous>=2.2.0",
    "bgg-api>=1.1.14",
    # bgg-api pins requests-cache <2; stay on 1.1.x to avoid newer API changes (cache disabled in client)
    "requests-cache>=1.1.1,<1.2",
]


[dependency-groups]
dev = [
    "schemathesis",
]


[project.scripts]
boardgames-api = "boardgames_api.app:main"

[tool.uv.sources]
boardgames-api = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/boardgames_api"]
